...
            checkBarButtonEnabled()
        }
    }
    
    private lazy var closeButtonItem: UIBarButtonItem = {
        let barButton = UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(closeThisVC))
        barButton.accessibilityIdentifier = "cancelButtonItem"
        return barButton
    }()
    private lazy var doneButtonItem: UIBarButtonItem = {
        let barButton = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(doneButtonTapped))
        barButton.isEnabled = false
        barButton.accessibilityIdentifier = "doneButtonItem"
        return barButton
    }()
    
...
