...
    
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    private func setupView() {
        accessibilityIdentifier = "AgendaTableViewCell"
        
        contentView.addSubview(goalTextLabel)
        contentView.addSubview(goalProgressView)
        contentView.addSubview(labelsStackView)
        
        NSLayoutConstraint.activate([
...
